cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
project(QtTest CXX)
set(CMAKE_AUTOMOC ON)
find_package(Qt6 COMPONENTS Widgets Sql REQUIRED)
add_executable(table-test table-test.cpp)
add_executable(table-test2 table-test2.cpp)
add_executable(qt-demo main.cpp mainwindow.cpp)
target_link_libraries(table-test Qt6::Widgets)
target_link_libraries(table-test2 Qt6::Widgets Qt6::Sql)
target_link_libraries(qt-demo Qt6::Widgets Qt6::Sql)
